--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
---- #YAML:1.0
+---
 name: Set-Array
-version: 0.12
+version: 0.13
 author:
-  - Ron Savage <ron@savage.net.au>
+  - 'Ron Savage <ron@savage.net.au>'
 abstract: |-
   Arrays as objects with lots of handy methods (including Set
   comparisons) and support for method chaining.
@@ -16,5 +16,5 @@ build_requires:
 provides:
   Set::Array:
     file: lib/Set/Array.pm
-    version: 0.12
-generated_by: Module::Build version 0.2607
+    version: 0.13
+generated_by: Module::Build version 0.2611
