--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,14 @@
 ---
 name: Set-Array
-version: 0.14
+version: 0.15
 author:
   - 'Ron Savage <ron@savage.net.au>'
 abstract: |-
   Arrays as objects with lots of handy methods (including Set
   comparisons) and support for method chaining.
 license: artistic
+resources:
+  license: http://opensource.org/licenses/artistic-license.php
 requires:
   Carp: 0
   Want: 0
@@ -16,5 +18,8 @@ build_requires:
 provides:
   Set::Array:
     file: lib/Set/Array.pm
-    version: 0.14
-generated_by: Module::Build version 0.2611
+    version: 0.15
+generated_by: Module::Build version 0.280801
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.2.html
+  version: 1.2
