Import of RSAVAGE/Set-Array-0.16 from CPAN.
gitpan-cpan-distribution: Set-Array
gitpan-cpan-version:      0.16
gitpan-cpan-path:         RSAVAGE/Set-Array-0.16.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,10 @@ Name=Set::Array
 Configlog.Creator=Module::Metadata::Changes V 1.01
 Configlog.Parser=Config::IniFiles V 2.39
 
+[V 0.16]
+Date=2008-07-25T09:28:00
+Comments=- Arrrrgggggghhhhh. Patch t/test.t to change the version number
+
 [V 0.15]
 Date=2008-07-22T10:55:00
 Comments= <<EOT
