Import of RSAVAGE/Set-Array-0.18 from CPAN.
gitpan-cpan-distribution: Set-Array
gitpan-cpan-version:      0.18
gitpan-cpan-path:         RSAVAGE/Set-Array-0.18.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,20 @@ Name=Set::Array
 Configlog.Creator=Module::Metadata::Changes V 1.01
 Configlog.Parser=Config::IniFiles V 2.39
 
+[V 0.18]
+Date=2008-11-05T09:45:00
+Comments= <<EOT
+- Patch sub indices() to accept more than 1 digit at each end of the range.
+Hence not just '0..9' but now '0..99' '0..99999' etc are all supported.
+Thanx to Georg Kipka for pointing out this problem.
+I (Ron) found the same problem in the code for sub fill(). Also the docs for
+fill() mistakenly used '3-5' as an example instead of '3..5'
+EOT
+
+[V 0.17]
+Date=2008-07-25T09:40:00
+Comments=- Patch sub intersection again to properly handle 0 as a member of a set
+
 [V 0.16]
 Date=2008-07-25T09:28:00
 Comments=- Arrrrgggggghhhhh. Patch t/test.t to change the version number
