--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Set-Array
-version: 0.17
+version: 0.18
 author:
   - 'Ron Savage <ron@savage.net.au>'
 abstract: |-
@@ -13,12 +13,13 @@ requires:
   Carp: 0
   Want: 0
 build_requires:
+  Test::Deep: 0
   Test::More: 0
   Test::Pod: 0
 provides:
   Set::Array:
     file: lib/Set/Array.pm
-    version: 0.17
+    version: 0.18
 generated_by: Module::Build version 0.280801
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
