Import of RSAVAGE/Set-Array-0.19 from CPAN.
gitpan-cpan-distribution: Set-Array
gitpan-cpan-version:      0.19
gitpan-cpan-path:         RSAVAGE/Set-Array-0.19.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -1,16 +1,32 @@
 [Module]
 Name=Set::Array
-Configlog.Creator=Module::Metadata::Changes V 1.01
-Configlog.Parser=Config::IniFiles V 2.39
+Changelog.Creator=Module::Metadata::Changes V 1.04
+Changelog.Parser=Config::IniFiles V 2.47
+
+[V 0.19]
+Date=2009-10-09T15:19:00
+Comments= <<EOT
+- Patch sub intersection() to assign the result to the object before returning.
+This means that in situ updates of the object now work.
+Many thanx to Helmut of hzlabs (de) for reporting this problem.
+- Add 3 new tests (44 .. 46) to protect against regressions.
+- Rename Changes.txt to CHANGES.
+EOT
 
 [V 0.18]
 Date=2008-11-05T09:45:00
 Comments= <<EOT
 - Patch sub indices() to accept more than 1 digit at each end of the range.
 Hence not just '0..9' but now '0..99' '0..99999' etc are all supported.
-Thanx to Georg Kipka for pointing out this problem.
-I (Ron) found the same problem in the code for sub fill(). Also the docs for
+Thanx to Georg Kipka for pointing out this problem
+- I (Ron) found the same problem in the code for sub fill(). Also the docs for
 fill() mistakenly used '3-5' as an example instead of '3..5'
+- Clean up the documentation generally particularly the as_hash() method
+- Document that the to_hash() method is an alias for as_hash()
+- Document that the symm_diff() method is an alias for symmetric_difference()
+- Fix documentation for join($string) which used to say join($char)
+- Add new tests for as_hash() fill() and indices()
+- Add Test::Deep to Build.PL and Makefile.PL to support new tests for as_hash()
 EOT
 
 [V 0.17]
