Import of RSAVAGE/Set-Array-0.20 from CPAN.
gitpan-cpan-distribution: Set-Array
gitpan-cpan-version:      0.20
gitpan-cpan-path:         RSAVAGE/Set-Array-0.20.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -1,16 +1,20 @@
 [Module]
 Name=Set::Array
-Changelog.Creator=Module::Metadata::Changes V 1.04
-Changelog.Parser=Config::IniFiles V 2.47
+Changelog.Creator=Module::Metadata::Changes V 1.08
+Changelog.Parser=Config::IniFiles V 2.57
+
+[V 0.20]
+Date=2010-02-10T13:53:02
+Comments= <<EOT
+- Add META.yml. Update MANIFEST.SKIP. Add MANIFEST and MYMETA.yml.
+- Change version # is t/test.t.
+EOT
 
 [V 0.19]
-Date=2009-10-09T15:19:00
+Date=2009-11-13T13:20:00
 Comments= <<EOT
-- Patch sub intersection() to assign the result to the object before returning.
-This means that in situ updates of the object now work.
-Many thanx to Helmut of hzlabs (de) for reporting this problem.
-- Add 3 new tests (44 .. 46) to protect against regressions.
-- Rename Changes.txt to CHANGES.
+- Run dos2unix
+- Rename Changes.txt to CHANGES
 EOT
 
 [V 0.18]
