--- a/META.yml
+++ b/META.yml
@@ -1,28 +1,26 @@
 ---
-name: Set-Array
-version: 0.19
+abstract: "Arrays as objects with lots of handy methods (including Set\ncomparisons) and support for method chaining."
 author:
   - 'Ron Savage <ron@savage.net.au>'
-abstract: |-
-  Arrays as objects with lots of handy methods (including Set
-  comparisons) and support for method chaining.
-license: artistic
-resources:
-  license: http://opensource.org/licenses/artistic-license.php
 build_requires:
   Test::Deep: 0
   Test::More: 0
   Test::Pod: 0
-requires:
-  Carp: 0
-  Want: 0
 configure_requires:
-  Module::Build: 0.35
-provides:
-  Set::Array:
-    file: lib/Set/Array.pm
-    version: 0.19
-generated_by: Module::Build version 0.35
+  Module::Build: 0.36
+generated_by: 'Module::Build version 0.3607'
+license: artistic
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
+name: Set-Array
+provides:
+  Set::Array:
+    file: lib/Set/Array.pm
+    version: 0.20
+requires:
+  Carp: 0
+  Want: 0
+resources:
+  license: http://www.perlfoundation.org/artistic_license_1_0
+version: 0.20
