Import of RSAVAGE/Set-Array-0.21 from CPAN.
gitpan-cpan-distribution: Set-Array
gitpan-cpan-version:      0.21
gitpan-cpan-path:         RSAVAGE/Set-Array-0.21.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -1,7 +1,15 @@
 [Module]
 Name=Set::Array
 Changelog.Creator=Module::Metadata::Changes V 1.08
-Changelog.Parser=Config::IniFiles V 2.57
+Changelog.Parser=Config::IniFiles V 2.65
+
+[V 0.21]
+Date=2010-12-03T11:26:00
+Comments= <<EOT
+- Implement document and test cpop() and cshift() as suggested by Jerrad Pierce. See RT#63543.
+- Patch print() to call CORE::print explicitly.
+- Remove version check test from t/test.t.
+EOT
 
 [V 0.20]
 Date=2010-02-10T13:53:02
