Import of RSAVAGE/Set-Array-0.22 from CPAN.
gitpan-cpan-distribution: Set-Array
gitpan-cpan-version:      0.22
gitpan-cpan-path:         RSAVAGE/Set-Array-0.22.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,14 @@ Name=Set::Array
 Changelog.Creator=Module::Metadata::Changes V 1.08
 Changelog.Parser=Config::IniFiles V 2.65
 
+[V 0.22]
+Date=2010-12-09T19:58:00
+Comments= <<EOT
+- Rewrite the docs for compact() delete() duplicates() reverse() sort() and unique()
+after email discussions with belg4mit. See RT#63543.
+- Expand t/test.t with specific tests for unique() in scalar list and chained context.
+EOT
+
 [V 0.21]
 Date=2010-12-03T11:26:00
 Comments= <<EOT
