Import of RSAVAGE/Set-Array-0.23 from CPAN.
gitpan-cpan-distribution: Set-Array
gitpan-cpan-version:      0.23
gitpan-cpan-path:         RSAVAGE/Set-Array-0.23.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -1,20 +1,29 @@
 [Module]
 Name=Set::Array
-Changelog.Creator=Module::Metadata::Changes V 1.08
-Changelog.Parser=Config::IniFiles V 2.65
+Changelog.Creator=Module::Metadata::Changes V 2.03
+Changelog.Parser=Config::IniFiles V 2.66
+
+[V 0.23]
+Date=2011-02-15T15:03:00
+Comments= <<EOT
+- Replace /usr/bin/perl with /usr/bin/env perl.
+- Replace common::sense with use strict and use warnings, to get uninit var warnings.
+- Add MYMETA.json to MANIFEST.SKIP.
+- Add META.json to distro.
+EOT
 
 [V 0.22]
 Date=2010-12-09T19:58:00
 Comments= <<EOT
-- Rewrite the docs for compact() delete() duplicates() reverse() sort() and unique()
+- Rewrite the docs for compact(), delete(), duplicates(), reverse(), sort() and unique(),
 after email discussions with belg4mit. See RT#63543.
-- Expand t/test.t with specific tests for unique() in scalar list and chained context.
+- Expand t/test.t with specific tests for unique() in scalar, list and chained context.
 EOT
 
 [V 0.21]
 Date=2010-12-03T11:26:00
 Comments= <<EOT
-- Implement document and test cpop() and cshift() as suggested by Jerrad Pierce. See RT#63543.
+- Implement, document and test cpop() and cshift(), as suggested by Jerrad Pierce. See RT#63543.
 - Patch print() to call CORE::print explicitly.
 - Remove version check test from t/test.t.
 EOT
@@ -37,16 +46,16 @@ EOT
 Date=2008-11-05T09:45:00
 Comments= <<EOT
 - Patch sub indices() to accept more than 1 digit at each end of the range.
-Hence not just '0..9' but now '0..99' '0..99999' etc are all supported.
+Hence not just '0..9', but now '0..99', '0..99999', etc are all supported.
 Thanx to Georg Kipka for pointing out this problem
-- I (Ron) found the same problem in the code for sub fill(). Also the docs for
-fill() mistakenly used '3-5' as an example instead of '3..5'
-- Clean up the documentation generally particularly the as_hash() method
+- I (Ron) found the same problem in the code for sub fill(). Also, the docs for
+fill() mistakenly used '3-5' as an example, instead of '3..5'
+- Clean up the documentation generally, particularly the as_hash() method
 - Document that the to_hash() method is an alias for as_hash()
 - Document that the symm_diff() method is an alias for symmetric_difference()
-- Fix documentation for join($string) which used to say join($char)
-- Add new tests for as_hash() fill() and indices()
-- Add Test::Deep to Build.PL and Makefile.PL to support new tests for as_hash()
+- Fix documentation for join($string), which used to say join($char)
+- Add new tests for as_hash(), fill() and indices()
+- Add Test::Deep to Build.PL and Makefile.PL, to support new tests for as_hash()
 EOT
 
 [V 0.17]
@@ -55,7 +64,7 @@ Comments=- Patch sub intersection again to properly handle 0 as a member of a se
 
 [V 0.16]
 Date=2008-07-25T09:28:00
-Comments=- Arrrrgggggghhhhh. Patch t/test.t to change the version number
+Comments=- Arrrrgggggghhhhh. Patch t/test.t, to change the version number
 
 [V 0.15]
 Date=2008-07-22T10:55:00
@@ -72,9 +81,9 @@ Comments=- Fix test which used a hard-coded version number
 [V 0.13]
 Date=2006-04-09T13:58:00
 Comments= <<EOT
-- Incorporate the patch supplied by Marke with thanks. Now the method 'difference' returns
-the objects in the difference and not the stingified versions of those objects.
-Also Marke's test has been added to test.t.
+- Incorporate the patch supplied by Marke, with thanks. Now the method 'difference' returns
+the objects in the difference, and not the stingified versions of those objects.
+Also, Marke's test has been added to test.t.
 Note: The undocument method 'complement' has not been updated. Email me suggestions if
 o You know exactly what it ought to do
 o How it differs from calling 'difference' with the $reversed flag set
@@ -84,8 +93,8 @@ EOT
 Date=2005-01-10T16:10:00
 Comments= <<EOT
 - Switch maintainers from the original author Daniel Berger to Ron Savage
-- Switch primary build method to Module::Build by adding a Build.PL and update Makefile.PL
-- Patch subs intersection() and symmetric_difference() so they handle values == 0 which means
+- Switch primary build method to Module::Build by adding a Build.PL, and update Makefile.PL
+- Patch subs intersection() and symmetric_difference() so they handle values == 0, which means
 they now work for array indexes
 - Patch sub flatten() to stop warnings like:
 Using an array as a reference is deprecated at ... Array.pm line 227
@@ -159,7 +168,7 @@ EOT
 Date=2001-11-20T14:30:00
 Comments= <<EOT
 - Fixed a bug with the 'unique' method. I had evaluated
-contexts incorrectly causing it to fail when part of a
+contexts incorrectly, causing it to fail when part of a
 chain. Thanks to Steffen Muller for the spot.
 - Freed some memory that was being wasted in the unique method
 - Fixed this archive a bit to expand a bit more properly
@@ -169,7 +178,7 @@ EOT
 Date=2001-10-09T12:30:00
 Comments= <<EOT
 - Turned on the 'fallback' option for 'overload'. This
-prevents errors for simple operations like "if($sao)" because
+prevents errors for simple operations like "if($sao)", because
 I was accidentally using the overloaded operators in some
 cases where I meant to use the CORE operators. Thanks to
 Terrence Brannon for the spot.
@@ -197,13 +206,13 @@ Comments= <<EOT
 - Modified several methods to either handle or die on
 undefined values. The following methods were changed:
 count - Counts undef elements if no args (or undef).
-delete - Dies if no arg (or undef). Now takes a list
-rather than a scalar as an arg (though can still take
-a scalar of course).
+delete - Dies if no arg (or undef). Now takes a list,
+rather than a scalar, as an arg (though can still take
+a scalar, of course).
 delete_at - Dies if no start index supplied (or undef).
 exists - Now possible to test for existence of 'undef'.
 foreach - Dies if no arg supplied (or undef).
-index - If no arg (or undef) returns index of first
+index - If no arg (or undef), returns index of first
 occurrence of 'undef' value within array.
 indices - Dies if no arg supplied (or undef).
 join - Now defaults to comma if no value supplied.
