--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: "Arrays as objects with lots of handy methods (including Set\ncomparisons) and support for method chaining."
+abstract: 'Arrays as objects with lots of handy methods'
 author:
   - 'Ron Savage <ron@savage.net.au>'
 build_requires:
@@ -7,8 +7,9 @@ build_requires:
   Test::More: 0
   Test::Pod: 0
 configure_requires:
-  Module::Build: 0.36
-generated_by: 'Module::Build version 0.3607'
+  Module::Build: 0.38
+dynamic_config: 1
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.110930'
 license: artistic
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,10 +18,10 @@ name: Set-Array
 provides:
   Set::Array:
     file: lib/Set/Array.pm
-    version: 0.22
+    version: 0.23
 requires:
   Carp: 0
   Want: 0
 resources:
-  license: http://www.perlfoundation.org/artistic_license_1_0
-version: 0.22
+  license: http://opensource.org/licenses/artistic-license.php
+version: 0.23
