Import of RSAVAGE/Set-Array-0.24 from CPAN.
gitpan-cpan-distribution: Set-Array
gitpan-cpan-version:      0.24
gitpan-cpan-path:         RSAVAGE/Set-Array-0.24.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -1,7 +1,16 @@
 [Module]
 Name=Set::Array
 Changelog.Creator=Module::Metadata::Changes V 2.03
-Changelog.Parser=Config::IniFiles V 2.66
+Changelog.Parser=Config::IniFiles V 2.68
+
+[V 0.24]
+Date=2012-03-07T11:52:00
+Comments= <<EOT
+- Due to bugs in Want's want('OBJECT') and wantref(), I used Try::Tiny to capture a call to want('OBJECT') in sub difference().
+If an error is thrown, I just ignore it. So, to get what's probably the expected result, see the sample code in the docs for difference().
+To this end, I've added an explicit section (=head2) in the docs for difference().
+- Ship the sample code as t/difference.pl.
+EOT
 
 [V 0.23]
 Date=2011-02-15T15:03:00
@@ -9,6 +18,7 @@ Comments= <<EOT
 - Replace /usr/bin/perl with /usr/bin/env perl.
 - Replace common::sense with use strict and use warnings, to get uninit var warnings.
 - Add MYMETA.json to MANIFEST.SKIP.
+- Update META.yml.
 - Add META.json to distro.
 EOT
 
