Import of RSAVAGE/Set-Array-0.25 from CPAN.
gitpan-cpan-distribution: Set-Array
gitpan-cpan-version:      0.25
gitpan-cpan-path:         RSAVAGE/Set-Array-0.25.tar.gz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,10 @@ Name=Set::Array
 Changelog.Creator=Module::Metadata::Changes V 2.03
 Changelog.Parser=Config::IniFiles V 2.68
 
+[V 0.25]
+Date=2012-03-09T16:58:00
+Comments=- Add Try::Tiny to pre-reqs. Add attributes, overload, strict, subs and warnings too.
+
 [V 0.24]
 Date=2012-03-07T11:52:00
 Comments= <<EOT
