Import of RSAVAGE/Set-Array-0.26 from CPAN.
gitpan-cpan-distribution: Set-Array
gitpan-cpan-version:      0.26
gitpan-cpan-path:         RSAVAGE/Set-Array-0.26.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,14 @@ Name=Set::Array
 Changelog.Creator=Module::Metadata::Changes V 2.03
 Changelog.Parser=Config::IniFiles V 2.68
 
+[V 0.26]
+Date=2012-03-22T10:50:00
+Comments= <<EOT
+- No code changes.
+- Expand the sample code and comments under difference() to show more clearly what sets get
+changed during operations, and to show another way of determining the difference between sets.
+EOT
+
 [V 0.25]
 Date=2012-03-09T16:58:00
 Comments=- Add Try::Tiny to pre-reqs. Add attributes, overload, strict, subs and warnings too.
