Import of RSAVAGE/Set-Array-0.27 from CPAN.
gitpan-cpan-distribution: Set-Array
gitpan-cpan-version:      0.27
gitpan-cpan-path:         RSAVAGE/Set-Array-0.27.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -1,7 +1,22 @@
 [Module]
 Name=Set::Array
-Changelog.Creator=Module::Metadata::Changes V 2.03
-Changelog.Parser=Config::IniFiles V 2.68
+Changelog.Creator=Module::Metadata::Changes V 2.04
+Changelog.Parser=Config::IniFiles V 2.78
+
+[V 0.27]
+Date=2012-12-15T07:19:00
+Comments= <<EOT
+- Fix RT#81971, kindly reported by Henrik Hald Nørgaard.
+When special chars, as used in regexps, are set members, or used to find set members, they
+must be quoted with \Q$value\E inside regexps.
+This fix was applied to count(), delete(), exists(), index() and rindex().
+- Add t/rt.81971.t to exercise the new code.
+- While examining the code for this fix, I found a couple of other bugs: In index() and rindex(),
+the value searched for was compared with each set member using this regexp, /$value/,
+instead of this regexp, /$value$/. The missing, trailing, $ meant that the member could match just
+the prefix of $value, rather than match the value exactly. So in those 2 methods the tests are now
+/\Q$value\E$/. The other 3 methods mentioned above already used /$value$/.
+EOT
 
 [V 0.26]
 Date=2012-03-22T10:50:00
