--- a/META.yml
+++ b/META.yml
@@ -9,7 +9,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.38
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4, CPAN::Meta::Converter version 2.120630'
+generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.120630'
 license: artistic
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,7 +18,7 @@ name: Set-Array
 provides:
   Set::Array:
     file: lib/Set/Array.pm
-    version: 0.26
+    version: 0.27
 requires:
   Carp: 0
   Try::Tiny: 0.11
@@ -29,5 +29,5 @@ requires:
   subs: 1
   warnings: 1.03
 resources:
-  license: http://opensource.org/licenses/artistic-license.php
-version: 0.26
+  license: http://www.perlfoundation.org/artistic_license_1_0
+version: 0.27
