--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,15 @@ Name=Set::Array
 Changelog.Creator=Module::Metadata::Changes V 2.04
 Changelog.Parser=Config::IniFiles V 2.78
 
+[V 0.28]
+Date=2012-12-19T08:50:00
+Comments= <<EOT
+- Extend fix for RT#81971 to add ^ in the regexps used in index() and rindex(), so they are now
+/^\Q$value\E$/ and not just /\Q$value\E$/. This issue was also reported by Henrik Hald Nørgaard.
+- Update docs for rindex() is say undef is returned - as with index() - if the value is not found.
+- Extend t/rt.81971.t to check rindex() returns undef when searching for the suffix of a value.
+EOT
+
 [V 0.27]
 Date=2012-12-15T07:19:00
 Comments= <<EOT
