Import of RSAVAGE/Set-Array-0.29 from CPAN.
gitpan-cpan-distribution: Set-Array
gitpan-cpan-version:      0.29
gitpan-cpan-path:         RSAVAGE/Set-Array-0.29.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -1,7 +1,18 @@
 [Module]
 Name=Set::Array
-Changelog.Creator=Module::Metadata::Changes V 2.04
+Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.78
+
+[V 0.29]
+Date=2013-07-03T16:20:00
+Comments= <<EOT
+- No code changes.
+- Rename CHANGES to Changes as per CPAN::Changes::SPEC.
+- Recreate META.* files so they say licence is artistic_2 rather than artistic_1.
+Build.PL and Makefile.PL already said artistic_2, but the META.* files didn't.
+There is no reference to licences in the source of the module itself.
+This was requested by Christopher Meng who packages stuff for Fedora.
+EOT
 
 [V 0.28]
 Date=2012-12-19T08:50:00
