Import of RSAVAGE/Set-Array-0.30 from CPAN.
gitpan-cpan-distribution: Set-Array
gitpan-cpan-version:      0.30
gitpan-cpan-path:         RSAVAGE/Set-Array-0.30.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,22 @@ Name=Set::Array
 Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.78
 
+[V 0.30]
+Date=2013-09-18T09:21:00
+Comments= <<EOT
+- No code changes.
+- Add t/intersection.*.pl as part of the expanded discussion of methods such as intersection().
+This code was developed in conjunction with Joern Behre, to help clear up confusion over
+the issue of the uniqueness of items returned from various methods.
+- Add an FAQ with an item discussing this issue.
+- Expand the discussion of overloaded operators to recommend testing of the output of various methods
+before production use, and that unique() may need to be called, since unique() is not called
+automatically during a call to, say, intersection().
+- Include docs for bag(), difference(), intersection(), is_equal() and not_equal() explicitly among
+all other methods, besides their original mention under 'OVERLOADED (COMPARISON) OPERATORS'.
+- Include docs for new() as well.
+EOT
+
 [V 0.29]
 Date=2013-07-03T16:20:00
 Comments= <<EOT
